Added forms to inputs. Can now post data. This is for day, edition and page notes
